--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>as</title>
+	
+</head>
+<body>
+<button id="find-me">Show my location</button><br />
+<p id="status"></p>
+<a id="map-link" target="_blank"></a>
 	<script type="text/javascript">
 		function geoFindMe() {
 
@@ -36,9 +42,5 @@
 document.querySelector('#find-me').addEventListener('click', geoFindMe);
 
 	</script>
-</head>
-<body>
-<button id="find-me">Show my location</button><br />
-<p id="status"></p>
-<a id="map-link" target="_blank"></a></body>
+	</body>
 </html>
